--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 <title>Mandelbrot Viewer</title>
+<meta property="og:title" content="Mandelbrot Viewer">
+<meta property="og:image" content="thumbnail.png">
 <style>
 .viewport {
     position: relative;
