--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </div>
 
 <script>
+(function() {
 "use strict";
 
 function mulRe(are, aim, bre, bim) {
@@ -451,6 +452,7 @@ function drawLine(cre, cim) {
 }
 
 window.addEventListener("load", init);
+})();
 </script>
 </body>
 
