--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 }
 </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163497675-1"></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-163497675-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
